# splurge-key-custodian

./: .gitignore  CLI_README.md  MANIFEST.in  README.md  pyproject.toml  simplification_task1.md
examples/: base58_generate_usage.py  basic_usage.py  cli_key_rotation_demo.py  env_master_password_usage.py  iterations_usage.py  key_rotation_usage.py  master_password_change_usage.py
splurge_key_custodian/: __init__.py  base58.py  cli.py  config.py  constants.py  crypto_utils.py  exceptions.py  file_manager.py  key_custodian.py  key_rotation.py  models.py  validation_utils.py
splurge_key_custodian/services/: __init__.py  backup_service.py  credential_service.py  index_service.py  master_key_service.py
splurge_key_custodian/services/rotation/: __init__.py  backup.py  manager.py  operations.py  transaction.py
tests/: DECOMPOSITION_SUMMARY.md  __init__.py  run_tests.py  test_utility.py
tests/functional/: __init__.py  test_cli.py  test_cli_functional.py  test_init.py  test_initialization_functional.py
tests/integration/: __init__.py  test_cli.py  test_cli_integration.py  test_key_custodian.py  test_key_custodian_core.py  test_key_rotation_core.py  test_key_rotation_integration.py
tests/unit/: __init__.py  test_backup_service.py  test_base58.py  test_cli.py  test_cli_rotation.py  test_config.py  test_credential_service.py  test_crypto_utils.py  test_exceptions.py  test_file_manager.py  test_file_manager_rotation.py  test_index_service.py  test_key_custodian.py  test_key_rotation.py  test_master_key_service.py  test_models.py  test_rotation_transaction.py  test_validation_utils.py
